# reportabug

./: .gitignore  CHANGELOG  README.md  create_archive.sh
sources/: CMakeLists.txt  version.h.in
sources/src/: CMakeLists.txt  config.h  config.h.in  githubmodule.cpp  githubmodule.h  gitreportmodule.cpp  gitreportmodule.h  main.cpp  reportabug.cpp  reportabug.h  reportabug.ui
